--- a/index.html
+++ b/index.html
@@ -3700,256 +3700,70 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 							</div>
 							<!--end::Calendar Widget 1-->
-							<!--begin::Modals-->
-							<!--begin::Modal - New Product-->
-							<div class="modal fade" id="kt_modal_add_event" tabindex-="1" aria-hidden="true" data-bs-focus="false">
-								<!--begin::Modal dialog-->
-								<div class="modal-dialog modal-dialog-centered mw-650px">
-									<!--begin::Modal content-->
-									<div class="modal-content">
-										<!--begin::Form-->
-										<form class="form" action="#" id="kt_modal_add_event_form">
-											<!--begin::Modal header-->
-											<div class="modal-header">
-												<!--begin::Modal title-->
-												<h2 class="fw-bold" data-kt-calendar="title">Add Event</h2>
-												<!--end::Modal title-->
-												<!--begin::Close-->
-												<div class="btn btn-icon btn-sm btn-active-icon-primary" id="kt_modal_add_event_close">
-													<i class="ki-duotone ki-cross fs-1">
-														<span class="path1"></span>
-														<span class="path2"></span>
-													</i>
-												</div>
-												<!--end::Close-->
-											</div>
-											<!--end::Modal header-->
-											<!--begin::Modal body-->
-											<div class="modal-body py-10 px-lg-17">
-												<!--begin::Input group-->
-												<div class="fv-row mb-9">
-													<!--begin::Label-->
-													<label class="fs-6 fw-semibold required mb-2">Event Name</label>
-													<!--end::Label-->
-													<!--begin::Input-->
-													<input type="text" class="form-control form-control-solid" placeholder="" name="calendar_event_name" />
-													<!--end::Input-->
-												</div>
-												<!--end::Input group-->
-												<!--begin::Input group-->
-												<div class="fv-row mb-9">
-													<!--begin::Label-->
-													<label class="fs-6 fw-semibold mb-2">Event Description</label>
-													<!--end::Label-->
-													<!--begin::Input-->
-													<input type="text" class="form-control form-control-solid" placeholder="" name="calendar_event_description" />
-													<!--end::Input-->
-												</div>
-												<!--end::Input group-->
-												<!--begin::Input group-->
-												<div class="fv-row mb-9">
-													<!--begin::Label-->
-													<label class="fs-6 fw-semibold mb-2">Event Location</label>
-													<!--end::Label-->
-													<!--begin::Input-->
-													<input type="text" class="form-control form-control-solid" placeholder="" name="calendar_event_location" />
-													<!--end::Input-->
-												</div>
-												<!--end::Input group-->
-												<!--begin::Input group-->
-												<div class="fv-row mb-9">
-													<!--begin::Checkbox-->
-													<label class="form-check form-check-custom form-check-solid">
-														<input class="form-check-input" type="checkbox" value="" id="kt_calendar_datepicker_allday" />
-														<span class="form-check-label fw-semibold" for="kt_calendar_datepicker_allday">All Day</span>
-													</label>
-													<!--end::Checkbox-->
-												</div>
-												<!--end::Input group-->
-												<!--begin::Input group-->
-												<div class="row row-cols-lg-2 g-10">
-													<div class="col">
-														<div class="fv-row mb-9">
-															<!--begin::Label-->
-															<label class="fs-6 fw-semibold mb-2 required">Event Start Date</label>
-															<!--end::Label-->
-															<!--begin::Input-->
-															<input class="form-control form-control-solid" name="calendar_event_start_date" placeholder="Pick a start date" id="kt_calendar_datepicker_start_date" />
-															<!--end::Input-->
-														</div>
-													</div>
-													<div class="col" data-kt-calendar="datepicker">
-														<div class="fv-row mb-9">
-															<!--begin::Label-->
-															<label class="fs-6 fw-semibold mb-2">Event Start Time</label>
-															<!--end::Label-->
-															<!--begin::Input-->
-															<input class="form-control form-control-solid" name="calendar_event_start_time" placeholder="Pick a start time" id="kt_calendar_datepicker_start_time" />
-															<!--end::Input-->
-														</div>
-													</div>
-												</div>
-												<!--end::Input group-->
-												<!--begin::Input group-->
-												<div class="row row-cols-lg-2 g-10">
-													<div class="col">
-														<div class="fv-row mb-9">
-															<!--begin::Label-->
-															<label class="fs-6 fw-semibold mb-2 required">Event End Date</label>
-															<!--end::Label-->
-															<!--begin::Input-->
-															<input class="form-control form-control-solid" name="calendar_event_end_date" placeholder="Pick a end date" id="kt_calendar_datepicker_end_date" />
-															<!--end::Input-->
-														</div>
-													</div>
-													<div class="col" data-kt-calendar="datepicker">
-														<div class="fv-row mb-9">
-															<!--begin::Label-->
-															<label class="fs-6 fw-semibold mb-2">Event End Time</label>
-															<!--end::Label-->
-															<!--begin::Input-->
-															<input class="form-control form-control-solid" name="calendar_event_end_time" placeholder="Pick a end time" id="kt_calendar_datepicker_end_time" />
-															<!--end::Input-->
-														</div>
-													</div>
-												</div>
-												<!--end::Input group-->
-											</div>
-											<!--end::Modal body-->
-											<!--begin::Modal footer-->
-											<div class="modal-footer flex-center">
-												<!--begin::Button-->
-												<button type="reset" id="kt_modal_add_event_cancel" class="btn btn-light me-3">Cancel</button>
-												<!--end::Button-->
-												<!--begin::Button-->
-												<button type="button" id="kt_modal_add_event_submit" class="btn btn-primary">
-													<span class="indicator-label">Submit</span>
-													<span class="indicator-progress">Please wait... 
-													<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
-												</button>
-												<!--end::Button-->
-											</div>
-											<!--end::Modal footer-->
-										</form>
-										<!--end::Form-->
-									</div>
-								</div>
-							</div>
-							<!--end::Modal - New Product-->
-							<!--begin::Modal - New Product-->
-							<div class="modal fade" id="kt_modal_view_event" tabindex="-1" data-bs-focus="false" aria-hidden="true">
-								<!--begin::Modal dialog-->
-								<div class="modal-dialog modal-dialog-centered mw-650px">
-									<!--begin::Modal content-->
-									<div class="modal-content">
-										<!--begin::Modal header-->
-										<div class="modal-header border-0 justify-content-end">
-											<!--begin::Edit-->
-											<div class="btn btn-icon btn-sm btn-color-gray-500 btn-active-icon-primary me-2" data-bs-toggle="tooltip" data-bs-dismiss="click" title="Edit Event" id="kt_modal_view_event_edit">
-												<i class="ki-duotone ki-pencil fs-2">
-													<span class="path1"></span>
-													<span class="path2"></span>
-												</i>
-											</div>
-											<!--end::Edit-->
-											<!--begin::Edit-->
-											<div class="btn btn-icon btn-sm btn-color-gray-500 btn-active-icon-danger me-2" data-bs-toggle="tooltip" data-bs-dismiss="click" title="Delete Event" id="kt_modal_view_event_delete">
-												<i class="ki-duotone ki-trash fs-2">
-													<span class="path1"></span>
-													<span class="path2"></span>
-													<span class="path3"></span>
-													<span class="path4"></span>
-													<span class="path5"></span>
-												</i>
-											</div>
-											<!--end::Edit-->
-											<!--begin::Close-->
-											<div class="btn btn-icon btn-sm btn-color-gray-500 btn-active-icon-primary" data-bs-toggle="tooltip" title="Hide Event" data-bs-dismiss="modal">
-												<i class="ki-duotone ki-cross fs-2x">
-													<span class="path1"></span>
-													<span class="path2"></span>
-												</i>
-											</div>
-											<!--end::Close-->
-										</div>
-										<!--end::Modal header-->
-										<!--begin::Modal body-->
-										<div class="modal-body pt-0 pb-20 px-lg-17">
-											<!--begin::Row-->
-											<div class="d-flex">
-												<!--begin::Icon-->
-												<i class="ki-duotone ki-calendar-8 fs-1 text-muted me-5">
-													<span class="path1"></span>
-													<span class="path2"></span>
-													<span class="path3"></span>
-													<span class="path4"></span>
-													<span class="path5"></span>
-													<span class="path6"></span>
-												</i>
-												<!--end::Icon-->
-												<div class="mb-9">
-													<!--begin::Event name-->
-													<div class="d-flex align-items-center mb-2">
-														<span class="fs-3 fw-bold me-3" data-kt-calendar="event_name"></span>
-														<span class="badge badge-light-success" data-kt-calendar="all_day"></span>
-													</div>
-													<!--end::Event name-->
-													<!--begin::Event description-->
-													<div class="fs-6" data-kt-calendar="event_description"></div>
-													<!--end::Event description-->
-												</div>
-											</div>
-											<!--end::Row-->
-											<!--begin::Row-->
-											<div class="d-flex align-items-center mb-2">
-												<!--begin::Bullet-->
-												<span class="bullet bullet-dot h-10px w-10px bg-success ms-2 me-7"></span>
-												<!--end::Bullet-->
-												<!--begin::Event start date/time-->
-												<div class="fs-6">
-													<span class="fw-bold">Starts</span>
-													<span data-kt-calendar="event_start_date"></span>
-												</div>
-												<!--end::Event start date/time-->
-											</div>
-											<!--end::Row-->
-											<!--begin::Row-->
-											<div class="d-flex align-items-center mb-9">
-												<!--begin::Bullet-->
-												<span class="bullet bullet-dot h-10px w-10px bg-danger ms-2 me-7"></span>
-												<!--end::Bullet-->
-												<!--begin::Event end date/time-->
-												<div class="fs-6">
-													<span class="fw-bold">Ends</span>
-													<span data-kt-calendar="event_end_date"></span>
-												</div>
-												<!--end::Event end date/time-->
-											</div>
-											<!--end::Row-->
-											<!--begin::Row-->
-											<div class="d-flex align-items-center">
-												<!--begin::Icon-->
-												<i class="ki-duotone ki-geolocation fs-1 text-muted me-5">
-													<span class="path1"></span>
-													<span class="path2"></span>
-												</i>
-												<!--end::Icon-->
-												<!--begin::Event location-->
-												<div class="fs-6" data-kt-calendar="event_location"></div>
-												<!--end::Event location-->
-											</div>
-											<!--end::Row-->
-										</div>
-										<!--end::Modal body-->
-									</div>
-								</div>
-							</div>
-							<!--end::Modal - New Product-->
 							<!--end::Modals-->
 						</div>
 						<!--end::Content-->
 					</div>
 					<!--end::Main-->
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h3 class="card-title">Standard/Standard</h3>
+									<div class="fs-5 text-muted fw-semibold">First, a disclaimer – the entire process of writing a blog post often takes more than a couple of hours, even if you can type eighty words as per minute and your writing skills are sharp.</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room02.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Standard</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">2900/net</b></td>
+														<td class="price-cell"><b style="font-color:red">1800/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">3500/net</b></td>
+														<td class="price-cell"><b style="font-color:red">2200/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
 					<!--begin::Footer-->
 					<div class="footer py-4 d-flex flex-column flex-md-row align-items-center justify-content-between" id="kt_footer">
 						<!--begin::Copyright-->
