--- a/index.html
+++ b/index.html
@@ -3764,6 +3764,370 @@ License: For each use you must have a valid license purchased only from above li
 						</div>
 						<!--end::Content-->
 					</div>
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h1 class="card-title">Deluxe</h1>
+									<div class="fs-5 text-muted fw-semibold">First, a disclaimer – the entire process of writing a blog post often takes more than a couple of hours, even if you can type eighty words as per minute and your writing skills are sharp.</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room03.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Deluxe</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">3200/net</b></td>
+														<td class="price-cell"><b style="font-color:red">2000/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">3800/net</b></td>
+														<td class="price-cell"><b style="font-color:red">2400/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h1 class="card-title">Deluxe Plus</h1>
+									<div class="fs-5 text-muted fw-semibold">This room offers a choice of either a double bed or twin beds. The room is larger than the deluxe type, so you can sleep comfortably.</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room04.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Deluxe Plus</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">3700/net</b></td>
+														<td class="price-cell"><b style="font-color:red">2500/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">4300/net</b></td>
+														<td class="price-cell"><b style="font-color:red">3000/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h1 class="card-title">Tatami Room /Japanese Style</h1>
+									<div class="fs-5 text-muted fw-semibold">
+										It is a room with a single tatami mat with a low-type double bed that creates an open space. There is also a washing area in the bath, so you can relax like you are at home in Japan.
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room05.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Tatami
+Japanese Style</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">4100/net</b></td>
+														<td class="price-cell"><b style="font-color:red">2800/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">4800/net</b></td>
+														<td class="price-cell"><b style="font-color:red">3400/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h1 class="card-title">Superior</h1>
+									<div class="fs-5 text-muted fw-semibold">
+										This room has one queen size bed. There is a large kitchen where you can easily prepare your own meals
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room06.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Superior</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">3700/net</b></td>
+														<td class="price-cell"><b style="font-color:red">2500/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">4300/net</b></td>
+														<td class="price-cell"><b style="font-color:red">3000/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h1 class="card-title">Executive</h1>
+									<div class="fs-5 text-muted fw-semibold">
+										This room has one queen size bed. There is a large kitchen where you can easily prepare your own meals
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room06.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Executive</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">5300/net</b></td>
+														<td class="price-cell"><b style="font-color:red">3500/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">6000/net</b></td>
+														<td class="price-cell"><b style="font-color:red">4200/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
+					<div class="d-flex flex-row flex-column-fluid align-items-stretch">
+						<!--begin::Content-->
+						<div class="content flex-row-fluid" id="kt_content">
+							<!--begin::Calendar Widget 1-->
+							<div class="card bg-light shadow-sm">
+								<div class="card-header">
+									<h1 class="card-title">Junior Suite</h1>
+									<div class="fs-5 text-muted fw-semibold">
+										This room has one queen size bed. There is a large kitchen where you can easily prepare your own meals
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="row justify-content-center">
+									<div class="w-50">
+											<!--begin::Image-->
+											<img class="w-100 card-rounded" src="images/room06.jpg" alt="">
+											<!--end::Image-->
+										</div>
+									</div>
+									<br>
+									<div class="row">
+										<div class="table-responsive">
+											<table style="background-color: bisque;" class="table table-striped table-rounded table-bordered table-gray-300 gy-7 gs-7">
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th scope="col" style="text-align: center;">Room Type</th>
+														<th scope="col" style="text-align: center;">One room (without breakfast)<br>Regular price: pesos</th>
+														<th scope="col" style="text-align: center;">Advance price: pesos (breakfast included)</th>
+														<th scope="col" style="text-align: center;">Price is subject to change without prior notice</th>
+													</tr>
+												</thead>
+												<thead>
+													<tr class="fw-semibold fs-6 text-gray-800">
+														<th colspan="4" scope="col" style="background-color: coral;text-align: center;"><b>Price is subject to change without prior notice</b></th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr style="background-color:beige ;">
+														<td rowspan="2" style="background-color:aquamarine;font-style: bold;font-size: 15px;text-align: center;padding-top: 5%;"><b>Junior Suite</b></td>
+														<td class="price-cell"><b style="font-color:red">Alone</b></td>
+														<td class="price-cell"><b style="font-color:red">5600/net</b></td>
+														<td class="price-cell"><b style="font-color:red">4200/net</b></td>
+													</tr>
+													<tr style="background-color: burlywood;">
+														<td class="price-cell"><b style="font-color:red">For the two of you</b></td>
+														<td class="price-cell"><b style="font-color:red">6400/net</b></td>
+														<td class="price-cell"><b style="font-color:red">5000/net</b></td>
+													</tr>
+													<!-- Add more rows if needed -->
+												</tbody>
+											</table>
+										</div>
+									</div>
+
+								</div>
+							</div>
+							<!--end::Calendar Widget 1-->
+							<!--end::Modals-->
+						</div>
+						<!--end::Content-->
+					</div>
+					
 					<!--begin::Footer-->
 					<div class="footer py-4 d-flex flex-column flex-md-row align-items-center justify-content-between" id="kt_footer">
 						<!--begin::Copyright-->
